--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="FirstHeading"> Hello World </h1>
         <p>This is my first HTML document</p>
         <a href=https://raider.io/characters/eu/hyjal/Cyki >Link to Cyki's Raider.IO</a>
-        <p><img src="F:\ITcourse\MyFirstRepo\Cyki.png" width="800" height="485" alt="Picture of Cyki"></p>
+        <p><img src="Cyki.png" width="800" height="485" alt="Picture of Cyki"></p>
         <h2> Dungeon's performed by Cyki in DF S1 </h2>
         <table>
             <tr>
