First jscript line

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
      <div class="row">
         <div class="col-sm-4"> 
             <h1 id="FirstHeading"> Hello World </h1>
-            <p>This is my first HTML document</p>
+            <p id="ptag"></p>
+            <script>
+            document.getElementById("ptag").innerHTML = "This is my first Jscript test";
+            </script>
             <a href=https://raider.io/characters/eu/hyjal/Cyki >Link to Cyki's Raider.IO</a>
             <p><img src="Cyki.png" width="600" height="364" alt="Picture of Cyki"></p>
         </div>
