Change for DL purpose

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             var a=1;
             var b=2;
             var c=b-a;
-            document.getElementById("ptag").innerHTML = "This is my first Jscript test: " + c;
+            document.getElementById("ptag").innerHTML = "This is my 1st Jscript test: " + c;
             </script>
             <a href=https://raider.io/characters/eu/hyjal/Cyki >Link to Cyki's Raider.IO</a>
             <p><img src="Cyki.png" width="600" height="364" alt="Picture of Cyki"></p>
