--- a/index.html
+++ b/index.html
@@ -102,6 +102,26 @@
                 <h2 v-else-if="otherVisible"> Another one!</h2>
                 <h2 v-else="isVisible"> Now you don't! Hehehe</h2>
             </div>
+            <div id="loopster">
+                <ul>
+                    <li v-for="e in elements">{{e}}</li>
+                </ul>
+            </div>
+            <div id="click">
+                <button v-on:click="incr(2)">+</button>
+                <button v-on:click="decr(2)">-</button>
+                <p>The value is {{ counter }}.</p>
+            </div>
+            <div id="computer">
+                <h2>{{count}}</h2>
+            </div>
+            <div id="welcomer">
+                <h2>{{display_header()}}!</h2>
+            </div>
+            <div id="thewatcher">
+                <h1>{{ message }}</h1>
+                <button @click="change_Message()">Change My Message!</button>
+            </div>
         </div>
      </div>
 </body>
@@ -109,9 +129,68 @@
 <script>
     new Vue({
         el: '#app',
-        data: {message: 'Greetings from Vue v-model!'}, 
-        el: '#app2',
-        data: {isVisible: true, otherVisible: true}
+        data: {message: 'Greetings from Vue v-model!'},  
     })
+    new Vue({
+        el: '#app2',
+        data: {isVisible: true, otherVisible: true}, 
+    })
+    new Vue({
+        el: '#loopster',
+        data: {elements: ["Element1", "Element2", "Element3", "Element 4", "Element5"]},
+    })
+    new Vue({
+        el: "#click",
+        data: { counter: 0},
+        methods:
+        {
+        incr(step) { step = step || 1, this.counter += step;},
+        decr(step) { step = step || 1, this.counter -= step;}
+        },
+    })
+    new Vue({
+        el: "#computer",
+        data: {
+            items: [1, 2, 3, 4, 5,],
+            sum: 0,
+        },
+        computed: {
+            count: function () {
+                for(let i = 0; i < this.items.length; i++) {
+                    this.sum = this.sum + this.items[i];
+                }
+                return "The count is " + this.sum;
+            }
+        }
+    })
+    new Vue({
+        el: "#welcomer",
+        data: {
+            Welcome: "Greeting from",
+            name: "Vue",
+        },
+        methods:{
+            display_header: function () {
+                return this.Welcome + " " + this.name;
+            },
+        },
+    });
+    new Vue({
+        el: "#thewatcher",
+        data: {
+        message: "Greetings from the exister!",
+        },
+        methods: {
+            change_Message: function () {
+                this.message = "Greetings from the watcher!";
+            },
+        },
+        watch: {
+            message: function () {
+                console.log(this.message)
+            },
+        },
+    });
+
 </script>
 </html>
